--- a/js/package.json
+++ b/js/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "author": "Bernhard Walter",
   "main": "lib/index.js",
+  "style": "style/index.css",
   "repository": {
     "type": "git",
     "url": "https://github.com/bernhard-42/cad-viewer-widget.git"
@@ -32,13 +33,14 @@
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
-    "webpack": "^5",
-    "rimraf": "^2.6.1"
+    "css-loader": "^6.1.0",
+    "rimraf": "^2.6.1",
+    "style-loader": "^3.1.0",
+    "webpack": "^5"
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4",
     "js-base64": "^3.6.1",
-    "lodash": "^4.17.4",
     "pako": "^2.0.3",
     "three-cad-viewer": "^0.9.0-beta.12"
   },
