--- a/js/package.json
+++ b/js/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
     "css-loader": "^6.1.0",
+    "eslint": "^7.31.0",
+    "prettier": "2.3.2",
     "rimraf": "^2.6.1",
     "style-loader": "^3.1.0",
     "webpack": "^5"
