--- a/js/package.json
+++ b/js/package.json
@@ -29,12 +29,15 @@
     "build:labextension": "jupyter labextension build .",
     "build:labextension:dev": "jupyter labextension build --development True .",
     "watch": "webpack --watch --mode=development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "npx prettier lib --check",
+    "prettier:fix": "npx prettier lib --write"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
     "css-loader": "^6.1.0",
     "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "2.3.2",
     "rimraf": "^2.6.1",
     "style-loader": "^3.1.0",
