--- a/js/package.json
+++ b/js/package.json
@@ -33,6 +33,12 @@
     "prettier": "npx prettier lib --check",
     "prettier:fix": "npx prettier lib --write"
   },
+  "dependencies": {
+    "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4",
+    "js-base64": "^3.6.1",
+    "pako": "^2.0.3",
+    "three-cad-viewer": "^0.9.1-beta.5"
+  },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
     "css-loader": "^6.1.0",
@@ -42,12 +48,6 @@
     "rimraf": "^2.6.1",
     "style-loader": "^3.1.0",
     "webpack": "^5"
-  },
-  "dependencies": {
-    "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4",
-    "js-base64": "^3.6.1",
-    "pako": "^2.0.3",
-    "three-cad-viewer": "^0.9.0"
   },
   "jupyterlab": {
     "extension": "lib/labplugin",
