introduce bumpconfig and enhance Makefile

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,32 @@
+[bumpversion]
+current_version = 0.9.5
+commit = False
+tag = False
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
+serialize = 
+	{major}.{minor}.{patch}{release}{build}
+	{major}.{minor}.{patch}
+
 [bdist_wheel]
-universal=1
+universal = 1
+
+[bumpversion:part:release]
+optional_value = final
+values = 
+	beta
+	rc
+	final
+
+[bumpversion:part:build]
+
+[bumpversion:file:cad_viewer_widget/_version.py]
+parse = __version__ = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
+
+[bumpversion:file:cad_viewer_widget/widget.py]
+parse = _module_version = Unicode\((?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)\)
+
+[bumpversion:file:js/package.json]
+parse = "version": (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
+
+[bumpversion:file:js/lib/widget.js]
+parse = _module_version: (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
