--- a/setup.cfg
+++ b/setup.cfg
@@ -28,5 +28,5 @@ parse = _module_version = Unicode\((?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+
 [bumpversion:file:js/package.json]
 parse = "version": (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
 
-[bumpversion:file:js/lib/widget.js]
-parse = _module_version: (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
+[bumpversion:file:js/lib/version.js]
+parse = _version = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
