--- a/js/package.json
+++ b/js/package.json
@@ -34,7 +34,8 @@
     "prettier:fix": "npx prettier lib --write"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4",
+    "@jupyter-widgets/base": "^4.0.0",
+    "@jupyter-widgets/jupyterlab-manager": "^3.0.0",
     "@jupyterlab/apputils": "^3.2.4",
     "js-base64": "^3.7.2",
     "pako": "^2.0.4",
