add sidecar into bumpversion

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,9 @@ parse = __version__ = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>
 [bumpversion:file:cad_viewer_widget/widget.py]
 parse = _module_version = Unicode\((?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)\)
 
+[bumpversion:file:cad_viewer_widget/sidecar.py]
+parse = _module_version = Unicode\((?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)\)
+
 [bumpversion:file:js/package.json]
 parse = "version": (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
 
