--- a/js/package.json
+++ b/js/package.json
@@ -37,7 +37,7 @@
     "@jupyter-widgets/base": "^4.0.0",
     "@jupyter-widgets/jupyterlab-manager": "^3.0.0",
     "@jupyterlab/apputils": "^3.3.1",
-    "three-cad-viewer": "1.6.2"
+    "three-cad-viewer": "^1.6.4"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.3.1",
