include environment.yml in bump version

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,6 @@ parse = "version": (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*
 
 [bumpversion:file:js/lib/version.js]
 parse = _version = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
+
+[bumpversion:file:environment.yml]
+parse = _version = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>\D*)(?P<build>\d*)
