--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cad-viewer-widget",
-  "version": "1.3.5",
+  "version": "1.4.0",
   "description": "A Jupyter widget to view cad objects",
   "license": "MIT",
   "author": "Bernhard Walter",
@@ -37,7 +37,7 @@
     "@jupyter-widgets/base": "^4.0.0",
     "@jupyter-widgets/jupyterlab-manager": "^3.0.0",
     "@jupyterlab/apputils": "^3.3.1",
-    "three-cad-viewer": "^1.6.4"
+    "three-cad-viewer": "1.7.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.3.1",
