--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cad-viewer-widget",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "description": "A Jupyter widget to view cad objects",
   "license": "MIT",
   "author": "Bernhard Walter",
@@ -34,22 +34,23 @@
     "prettier:fix": "npx prettier lib --write"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^4.0.0",
-    "@jupyter-widgets/jupyterlab-manager": "^3.0.0",
+    "@jupyter-widgets/base": "^6.0.5",
+    "@jupyter-widgets/jupyterlab-manager": "^5.0.8",
     "@jupyterlab/apputils": "^3.3.1",
-    "three-cad-viewer": "1.7.0"
+    "three-cad-viewer": "1.8.6"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.3.1",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.5.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
     "prettier": "2.5.1",
-    "rimraf": "^3.0.2",
-    "style-loader": "^3.3.1",
+    "rimraf": "^5.0.1",
+    "style-loader": "^3.3.3",
     "svg-inline-loader": "^0.8.2",
-    "terser-webpack-plugin": "^5.2.4",
-    "webpack": "^5"
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "jupyterlab": {
     "extension": "lib/labplugin",
