--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,78 @@
 [build-system]
-requires = ["jupyter_packaging~=0.7.9", "jupyterlab>=3.0.0,==3.*", "setuptools>=40.8.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version", "hatch-jupyter-builder>=0.5"]
+build-backend = "hatchling.build"
+
+[project]
+name = "cad_viewer_widget"
+readme = "README.md"
+license = { file = "LICENSE" }
+requires-python = ">=3.8"
+classifiers = [
+    "Framework :: Jupyter",
+    "Framework :: Jupyter :: JupyterLab",
+    "Framework :: Jupyter :: JupyterLab :: 4",
+    "Framework :: Jupyter :: JupyterLab :: Extensions",
+    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
+    "License :: OSI Approved :: BSD License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+dependencies = ["ipywidgets~=8.0", "jupyterlab~=4.0", "pyparsing", "numpy"]
+
+dynamic = ["version", "description", "authors", "urls", "keywords"]
+
+[tool.hatch.version]
+source = "nodejs"
+path = "js/package.json"
+
+[tool.hatch.metadata.hooks.nodejs]
+fields = ["description", "authors", "urls"]
+path = "js/package.json"
+
+[tool.hatch.build.targets.sdist]
+artifacts = ["cad_viewer_widget/labextension"]
+exclude = [".github", "binder"]
+
+[tool.hatch.build.targets.wheel.shared-data]
+"cad_viewer_widget/labextension" = "share/jupyter/labextensions/cad-viewer-widget"
+"install.json" = "share/jupyter/labextensions/cad-viewer-widget/install.json"
+
+[tool.hatch.build.hooks.version]
+path = "cad_viewer_widget/_version.py"
+
+[tool.hatch.build.hooks.jupyter-builder]
+build-function = "hatch_jupyter_builder.npm_builder"
+ensured-targets = [
+    "cad_viewer_widget/labextension/static/style.js",
+    "cad_viewer_widget/labextension/package.json",
+]
+skip-if-exists = ["cad_viewer_widget/labextension/static/style.js"]
+
+[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
+build_cmd = "build:prod"
+npm = ["yarn"]
+path = "js"
+
+[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
+build_cmd = "install:extension"
+npm = ["yarn"]
+source_dir = "js"
+build_dir = "cad_viewer_widget/labextension"
+
+[tool.jupyter-releaser.options]
+version_cmd = "hatch version"
+
+[tool.jupyter-releaser.hooks]
+before-build-npm = [
+    "python -m pip install 'jupyterlab>=4.0.0,<5'",
+    "yarn",
+    "yarn build:prod"
+]
+before-build-python = ["yarn clean:all"]
+
+[tool.check-wheel-contents]
+ignore = ["W002"]
