--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ path = "js/package.json"
 
 [tool.hatch.build.targets.sdist]
 artifacts = ["cad_viewer_widget/labextension"]
-exclude = [".github", "binder"]
+exclude = [".github", "binder", "examples", "docs", "notebooks", ".[a-z]*"]
 
 [tool.hatch.build.targets.wheel.shared-data]
 "cad_viewer_widget/labextension" = "share/jupyter/labextensions/cad-viewer-widget"
