--- a/js/package.json
+++ b/js/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "cad-viewer-widget",
   "version": "2.0.0",
   "description": "A Jupyter widget to view cad objects",
@@ -22,7 +22,8 @@
   ],
   "files": [
     "lib/**/*.js",
-    "dist/*.js"
+    "dist/*.js",
+    "style/*.css"
   ],
   "scripts": {
     "clean": "rimraf dist/ && rimraf ../cad_viewer_widget/labextension/ && rimraf ../cad_viewer_widget/nbextension",
