--- a/js/package.json
+++ b/js/package.json
@@ -31,31 +31,30 @@
     "build": "webpack --mode=development && yarn run build:labextension:dev",
     "build:prod": "webpack --mode=production && yarn run build:labextension",
     "build:labextension": "jupyter labextension build .",
-    "build:labextension:dev": "jupyter labextension build --development True .",
+    "build:labextension:dev": "jupyter labextension build --development True | sed '/^WARNING/,/^$/d'",
     "watch": "webpack --watch --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier": "npx prettier lib --check",
     "prettier:fix": "npx prettier lib --write"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^6.0.5",
-    "@jupyter-widgets/jupyterlab-manager": "^5.0.8",
-    "@jupyterlab/apputils": "^4.1.4",
-    "three-cad-viewer": "1.8.6",
-    "tslib": "^2.6.1"
+    "@jupyter-widgets/base": "^6.0.10",
+    "@jupyter-widgets/jupyterlab-manager": "^5.0.13",
+    "@jupyterlab/apputils": "^4.4.5",
+    "three-cad-viewer": "3.2.3"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^4.0.0",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "2.5.1",
-    "rimraf": "^5.0.1",
-    "style-loader": "^3.3.3",
+    "@jupyterlab/builder": "^4.3.5",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "prettier": "3.5.2",
+    "rimraf": "^6.0.1",
+    "style-loader": "^4.0.0",
     "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^6.0.1"
   },
   "jupyterlab": {
     "extension": "lib/labplugin",
