--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,3 +77,56 @@ before-build-python = ["yarn clean"]
 
 [tool.check-wheel-contents]
 ignore = ["W002"]
+
+# bump-my-version settings
+
+[tool.bumpversion]
+current_version = "3.0.0"
+commit = false
+tag = false
+parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>\\D*)(?P<build>\\d*)"
+serialize = ["{major}.{minor}.{patch}"]
+allow_dirty = true
+message = "Bump version: {current_version} → {new_version}"
+search = "{current_version}"
+replace = "{new_version}"
+regex = false
+ignore_missing_version = false
+ignore_missing_files = false
+sign_tags = false
+commit_args = ""
+setup_hooks = []
+pre_commit_hooks = []
+post_commit_hooks = []
+
+[[tool.bumpversion.part.build]]
+
+[[tool.bumpversion.files]]
+filename = "cad_viewer_widget/_version.py"
+search = 'VERSION = "{current_version}"'
+replace = 'VERSION = "{new_version}"'
+
+[[tool.bumpversion.files]]
+filename = "cad_viewer_widget/widget.py"
+search = '_module_version = Unicode("{current_version}"'
+replace = '_module_version = Unicode("{new_version}"'
+
+[[tool.bumpversion.files]]
+filename = "cad_viewer_widget/sidecar.py"
+search = '_module_version = Unicode("{current_version}"'
+replace = '_module_version = Unicode("{new_version}"'
+
+[[tool.bumpversion.files]]
+filename = "js/package.json"
+search = '"version": "{current_version}"'
+replace = '"version": "{new_version}"'
+
+[[tool.bumpversion.files]]
+filename = "js/lib/version.js"
+search = '_version = "{current_version}"'
+replace = '_version = "{new_version}"'
+
+[[tool.bumpversion.files]]
+filename = "environment.yml"
+search = 'cad-viewer-widget=={current_version}'
+replace = 'cad-viewer-widget=={new_version}'
